--- a/style.css
+++ b/style.css
@@ -8,22 +8,19 @@
     font-family: "Poppins", sans-serif;
 }
 
-body {
-    overflow-x: hidden;
-}
-
 .container-nav {
     width: 100%;
-    height: 50px;
+    height: 60px;
     background-color: #210B2C;
 }
 
 .container-nav .navBar {
-    height: 50px;
+    height: 60px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    font-size: 20px;
 }
 
 .container-nav .navBar li {
@@ -31,7 +28,6 @@ body {
     list-style: none;
     margin: 0 5px;
     padding: 5px;
-    /* float: left; */
 }
 
 .container-nav .navBar li a {
@@ -39,18 +35,19 @@ body {
 }
 
 .container-perfil {
-    height: calc(100vh - 50px);
+    height: calc(100vh - 60px);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     position: relative;
+    font-size: 24px;
 }
 
 .container-perfil .foto {
-    height: 288px;
-    width: 288px;
-    border-radius: 144px;
+    height: 388px;
+    width: 388px;
+    border-radius: 50%;
     background: url("img/KRL_1283.JPG") no-repeat;
     background-size: cover;
     background-position-y: center;
@@ -67,7 +64,7 @@ body {
 }
 
 .container-perfil .redes-sociais li a i {
-    font-size: 25px;
+    font-size: 40px;
     color: black;
 }
 
@@ -114,6 +111,7 @@ body {
     height: calc(100vh + 50px);
     align-items: center;
     justify-content: center;
+    font-size: 24px;
 }
 
 .about-me h1 {
@@ -144,7 +142,7 @@ body {
 }
 
 .soft-skills .skills li i {
-    font-size: 50px;
+    font-size: 80px;
 }
 
 .soft-skills .skills li i.fa-js:hover {
@@ -180,6 +178,7 @@ body {
     padding: 10px;
     margin-bottom: 15px;
     cursor: pointer;
+    font-size: 20px;
 }
 
 .btn:hover {
@@ -199,6 +198,7 @@ body {
     flex-direction: column;
     text-align: center;
     gap: 15px;
+    font-size: 24px;
 }
 
 .sec-projects .projects .project {
@@ -230,7 +230,7 @@ footer {
 
 
     .container-perfil {
-        height: calc(100vh - 50px);
+        height: calc(100vh - 60px);
     }
 
     .about-me {
